--- a/src/containers/FeatureSection/FeatureSection.module.css
+++ b/src/containers/FeatureSection/FeatureSection.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 80px 20px;
+  padding: 80px;
   background-color: var(--white);
 }
 
@@ -17,11 +17,13 @@
   display: inline-block;
   background-color: #00DCCD; /* Bright Cyan Badge */
   color: var(--white);
-  padding: 8px 24px;
+  padding: 18px 24px;
   border-radius: 50px;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 20px;
   margin-bottom: 20px;
+  width: 10%;
+  text-align: center;
 }
 
 .headline {
