--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,5 +1,5 @@
 .sectionPadding {
-  padding: 20px; /* Space around the card */
+  padding: 20px 80px; /* Space around the card */
   display: flex;
   justify-content: center;
 }
@@ -7,7 +7,8 @@
 .heroCard {
   width: 100%;
   max-width: var(--max-width);
-  height: 500px; /* Fixed height for the banner look */
+  /* max-width: 96%; */
+  height: 650px; /* Fixed height for the banner look */
   border-radius: 30px; /* The rounded corners */
   overflow: hidden;
   
