--- a/src/containers/Testimonials/Testimonials.module.css
+++ b/src/containers/Testimonials/Testimonials.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 80px 20px;
+  padding: 80px;
   background-color: var(--white);
 }
 
@@ -19,10 +19,11 @@
   display: inline-block;
   background-color: #00DCCD; /* Cyan */
   color: var(--white);
-  padding: 8px 20px;
+  padding: 18px 24px;
+  text-align: center;
   border-radius: 50px;
   font-weight: 600;
-  font-size: 14px;
+  font-size: 20px;
   margin-bottom: 16px;
 }
 
