updated and added pages

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -20,4 +20,11 @@
   transform: translateY(-1px);
 }
 
+@media (max-width: 750px) {
+  .btn {
+    padding: 10px 20px;
+  }
+  
+}
+
 /* We will add more variants later as we need them */
