--- a/src/containers/Testimonials/Testimonials.module.css
+++ b/src/containers/Testimonials/Testimonials.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 80px;
+  padding: 20px;
   background-color: var(--white);
 }
 
@@ -84,5 +84,8 @@
   
   .headline {
     font-size: 32px;
+  }
+  .section {
+    padding: 20px;
   }
 }
