--- a/src/containers/GallerySection/GallerySection.module.css
+++ b/src/containers/GallerySection/GallerySection.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 80px 0;
+  padding: 30px;
   background-color: var(--white);
   /* Remove width: 100% and overflow: hidden from here */
   display: flex;
