--- a/src/containers/PersonalisedSection/PersonalisedSection.module.css
+++ b/src/containers/PersonalisedSection/PersonalisedSection.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 80px 20px;
+  padding: 30px;
   background-color: var(--white);
 }
 
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   padding-left: 60px; /* Space from left edge */
+  background-position: 20% center
 }
 
 .formCard {
@@ -26,7 +27,6 @@
   border-radius: 16px;
   width: 100%;
   max-width: 480px;
-  /* border: 2px solid #00C2A0; */
   box-shadow: 0 20px 40px rgba(0,0,0,0.1);
   position: relative;
   z-index: 2;
@@ -120,5 +120,8 @@
   .row {
     flex-direction: column;
     gap: 16px;
+  }
+  .section {
+    padding: 20px;
   }
 }
